test/fixtures/public/analysis/success/undefined_var_array1.jmm
class Child {
    public static void main(String[] args) {
        int[] c;
        int[] d;

        c = new int[10];
        d = new int[10];

        c[1] = d[2];
    }
}