test/fixtures/public/analysis/fail/undefined_var_array2.jmm
class Child {
    public static void main(String[] args) {
        int[] c;
        int[] d;

        d = new int[10];

        c[1] = d[2]; // Undefined c

    }
}